<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login" />

    <TextView
        android:id="@+id/tvUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/tv_uname" />

    <EditText
        android:id="@+id/etUName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/tvPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/tv_pass" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/butLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_login" />

    <CheckBox
        android:id="@+id/chkRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_remember" />

</LinearLayout>